# xyz-pro

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
improvements/: l1_bloom_implementation.rs  src_rng_pool.rs
src/: address.rs  bsgs.rs  cli.rs  crypto.rs  error.rs  gpu.rs  lib.rs  main.rs  memory_log.rs  puzzle_mode.rs  puzzle_scanner.rs  ripemd160.metal  rng_pool.rs  secp256k1_scanner.metal  sha256_33.metal  sha256_65.metal  startup_tests.rs  targets.rs  types.rs  weak_key_generator.rs
src/bridge/: mod.rs  pipeline.rs  traits.rs  types.rs
src/crypto/: mod.rs
src/filter/: mod.rs  sharded_filter.rs  xor_filter.rs  xor_lookup.metal
src/generator/: adapter.rs  batch.rs  encoder.rs  gpu.rs  keygen.metal  keygen.rs  mod.rs  writer.rs
src/math/: bsgs.rs  field_ops.metal  mod.rs  simd_bigint.metal
src/reader/: adapter.rs  encoder.rs  mod.rs  scanner.rs  targets.rs
src/rng/: mod.rs  philox.metal  philox.rs
src/scanner/: mod.rs  zero_copy.rs
src/targets/: mod.rs
src/tests/: cpu_gpu_xor_integration.rs  edge_cases.rs  mod.rs
src/thermal/: hardware_monitor.rs  mod.rs  pid_controller.rs
tests/: glv_math_verification.rs  integration.rs  integration_test.rs  unit.rs
tests/integration/: correctness.rs  cpu_gpu_xor.rs  edge_cases.rs  optimizations.rs  performance.rs  philox_test.rs  pid_tuning.rs  simd_validation.rs  thermal.rs
tests/unit/: philox_test.rs
ultimate-plan/: Cargo.toml  correctness.rs  philox.metal  philox.rs  pid_controller.rs  xor_filter.rs  xor_lookup.metal
