[package]
name = "xyz-pro"
version = "0.3.0"
edition = "2021"

[dependencies]
# Crypto
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
ripemd = "0.1"

# Encoding
hex = "0.4"
bs58 = "0.5"
bech32 = "0.9"

# Random
rand = "0.8"

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency
crossbeam-channel = "0.5"
rayon = "1.10"

# Memory mapping
memmap2 = "0.9"
bytemuck = { version = "1.16", features = ["derive"] }

# GPU
metal = "0.27"

# Utils
thiserror = "1.0"
chrono = "0.4"
ctrlc = "3.4"
fxhash = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
