[package]
name = "xyz-pro"
version = "0.3.0"
edition = "2021"

[dependencies]
# Crypto
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
ripemd = "0.1"

# Encoding
hex = "0.4"
bs58 = "0.5"
bech32 = "0.9"

# Random
rand = "0.8"

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency
crossbeam-channel = "0.5"
rayon = "1.10"
dashmap = "5.5"  # Lock-free concurrent hashmap for deduplication

# Memory mapping
memmap2 = "0.9"
bytemuck = { version = "1.16", features = ["derive"] }

# GPU
metal = "0.27"

# Utils
thiserror = "1.0"
chrono = "0.4"
ctrlc = "3.4"
fxhash = "0.2"
lazy_static = "1.4"

[features]
default = ["philox-rng", "xor-filter", "pid-thermal", "zero-copy"]  # Ultimate system enabled by default

# Phase 1: Philox RNG
philox-rng = []        # GPU-native Philox4x32 RNG

# Phase 2: Xor Filter
xor-filter = []         # O(1) Xor filter (vs Bloom + Binary)

# Phase 3: SIMD Math
simd-math = []          # SIMD-group 256-bit arithmetic

# Phase 4: PID Thermal
pid-thermal = []        # PID thermal controller

# Phase 5: Zero-Copy
zero-copy = []          # Zero-copy unified memory

# Convenience feature sets
all-features = ["philox-rng", "xor-filter", "simd-math", "pid-thermal", "zero-copy"]
safe-features = ["philox-rng", "xor-filter", "pid-thermal"]  # Exclude risky SIMD and zero-copy

# Legacy mode (all new features disabled)
legacy-mode = []

[dev-dependencies]
hex = "0.4"  # For test vectors
rand = "0.8"  # For random test data

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
