[package]
name = "xyz-pro"
version = "0.3.0"
edition = "2021"
default-run = "btc_keygen"

[dependencies]
# Crypto
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
ripemd = "0.1"

# Encoding
hex = "0.4"
bs58 = "0.5"
bech32 = "0.9"

# Random
rand = "0.8"

# JSON & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"  # Fast binary serialization for cache

# Concurrency
crossbeam-channel = "0.5"
rayon = "1.10"
dashmap = "5.5"  # Lock-free concurrent hashmap for deduplication
parking_lot = "0.12"  # Fast mutex implementation (no timeout, no poison)

# Memory mapping
memmap2 = "0.9"
bytemuck = { version = "1.16", features = ["derive"] }

# GPU
metal = "0.27"

# Utils
thiserror = "1.0"
chrono = "0.4"
ctrlc = "3.4"
fxhash = "0.2"
lazy_static = "1.4"
once_cell = "1.19"  # Modern lazy initialization (for lock-free pipeline stats)

# CLI
clap = { version = "4.5", features = ["derive"] }

# XOR Filter - O(1) probabilistic lookup, 10x less memory than HashSet
xorf = { version = "0.8", optional = true }

# System (macOS native calls - no fork overhead)
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[features]
# Enable all implemented features by default
default = ["philox-rng", "xor-filter", "zero-copy"]

# ============================================================================
# IMPLEMENTED FEATURES
# ============================================================================

# Philox RNG - GPU-native Philox4x32 random number generator
# Used in keygen.metal for deterministic parallel key generation
philox-rng = []

# Xor Filter - O(1) probabilistic lookup, 10x less memory than HashSet
# False positive rate: < 0.4% (acceptable for initial screening)
# When enabled, uses Xor8 filter alongside HashSet for fast rejection
xor-filter = ["dep:xorf"]

# Zero-Copy Unified Memory - Direct GPU buffer access without memcpy
# Provides direct slice references to GPU buffer data
zero-copy = []

# ============================================================================
# PLANNED FEATURES (NOT YET IMPLEMENTED)
# ============================================================================

# PID Thermal Controller - Dynamic GPU throttling based on temperature
# TODO: Implement in src/generator/gpu.rs using IOKit for macOS
pid-thermal = []

# ============================================================================
# CONVENIENCE FEATURE SETS
# ============================================================================

# All features including planned ones (for development only)
all-features = ["philox-rng", "xor-filter", "pid-thermal", "zero-copy"]

# Safe production features (only stable implementations)
safe-features = ["philox-rng", "xor-filter", "zero-copy"]

# Legacy mode - minimal features for compatibility testing
legacy-mode = []

[dev-dependencies]
hex = "0.4"  # For test vectors
rand = "0.8"  # For random test data
k256 = { version = "0.13", features = ["ecdsa"] }  # For pubkey tests
num-bigint = "0.4"  # For GLV constant verification tests
num-traits = "0.2"  # For BigUint trait methods

[[bin]]
name = "btc_keygen"
path = "src/bin/btc_keygen.rs"

[[bin]]
name = "btc_reader"
path = "src/bin/btc_reader.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
