[package]
name = "xyz-pro"
version = "1.0.0"
edition = "2021"
authors = ["XYZ-PRO Team"]
description = "World's most advanced Bitcoin key scanner - 250+ M/s on M1 Pro"

[dependencies]
# Crypto primitives
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
ripemd = "0.1"

# Encoding
hex = "0.4"
bs58 = "0.5"
bech32 = "0.9"

# Random (legacy compatibility)
rand = "0.8"

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency
crossbeam-channel = "0.5"
rayon = "1.10"
dashmap = "5.5"

# Memory mapping
memmap2 = "0.9"
bytemuck = { version = "1.16", features = ["derive"] }

# GPU (Metal)
metal = "0.27"

# Xor Filter (NEW - O(1) filtering)
xorf = "0.11"

# Fast hashing (NEW - for Xor filter)
fxhash = "0.2"

# Error handling
thiserror = "1.0"

# Time and date
chrono = "0.4"

# Signal handling
ctrlc = "3.4"

[dev-dependencies]
criterion = "0.5"  # For benchmarking
proptest = "1.4"   # Property-based testing

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true

[features]
default = ["philox-rng", "xor-filter", "simd-math", "pid-thermal"]

# Feature flags for gradual rollout
philox-rng = []      # GPU-native Philox4x32 RNG
xor-filter = []      # O(1) Xor filter (vs Bloom + Binary)
simd-math = []       # SIMD-group 256-bit arithmetic
pid-thermal = []     # PID thermal controller
zero-copy = []       # Zero-copy unified memory

# Legacy mode (all new features disabled)
legacy-mode = []

# Safe mode (only proven features)
safe-mode = []

[[bench]]
name = "philox_perf"
harness = false

[[bench]]
name = "xor_filter_perf"
harness = false

[[bench]]
name = "simd_math_perf"
harness = false